--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,9 +7,11 @@
     <string name="password">비밀번호</string>
     <string name="check_password">비밀번호 확인</string>
     <string name="please_input_name">이름을 입력해주세요.</string>
-    <string name="please_input_id">아이디를 입력해주세요.</string>
-    <string name="please_input_password">비밀번호를 입력해주세요.</string>
-    <string name="please_input_check_password">비밀번호를 확인해주세요.</string>
+    <string name="please_input_id">영문 / 숫자 6자리 이상</string>
+    <string name="please_input_password">비밀번호를 입력해주세요</string>
+    <string name="please_input_check_password">비밀번호를 확인해주세요</string>
+    <string name="brith">생년월일</string>
+    <string name="please_input_birth">생년월일 8자리를 입력해 주세요</string>
     <string-array name="mbti_array">
         <item>MBTI를 선택해주세요.</item>
         <item>INTJ</item>
@@ -29,4 +31,15 @@
         <item>ESFJ</item>
         <item>ESFP</item>
     </string-array>
+    <string-array name="domain_value">
+        <item>이메일 선택</item>
+        <item>naver.com</item>
+        <item>gmail.com</item>
+        <item>hanmail.net</item>
+        <item>yahoo.co.kr</item>
+        <item>korea.com</item>
+        <item>nate.com</item>
+        <item>직접 입력</item>
+    </string-array>
+
 </resources>
